[gd_scene load_steps=2 format=3 uid="uid://dbtd6w07pf5p5"]

[ext_resource type="Script" uid="uid://dhfdstwga2bhh" path="res://scripts/Dice/DiceGrid.gd" id="1_efbfp"]

[node name="DiceGrid" type="Control"]
layout_mode = 3
anchor_left = 0.0277778
anchor_top = 0.0493827
anchor_right = 0.972222
anchor_bottom = 0.641975
offset_bottom = -6.10352e-05
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
script = ExtResource("1_efbfp")
metadata/_edit_use_anchors_ = true

[node name="DiceTabs" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_top = 384.0
offset_right = 351.99997
offset_bottom = 448.0

[node name="Score Dice" type="Button" parent="DiceTabs"]
layout_mode = 1
anchors_preset = -1
anchor_left = 2.5000002
anchor_right = 2.7727275
anchor_bottom = 0.5
toggle_mode = true
text = "Score Dice"
metadata/_edit_use_anchors_ = true

[node name="Reward Dice" type="Button" parent="DiceTabs"]
layout_mode = 1
anchors_preset = -1
anchor_left = 2.7727275
anchor_right = 3.0909092
anchor_bottom = 0.5
toggle_mode = true
text = "Reward Dice"
metadata/_edit_use_anchors_ = true

[node name="DiceGridContainer" type="AspectRatioContainer" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 4
ratio = 2.775
stretch_mode = 3
alignment_horizontal = 0
alignment_vertical = 0
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="DiceGridContainer"]
layout_mode = 2
mouse_filter = 1

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="DiceGridContainer/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.979412
ratio = 2.84
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="DiceGridContainer/Panel/AspectRatioContainer"]
layout_mode = 2
theme_override_constants/separation = 8
metadata/_edit_use_anchors_ = true

[node name="FaceScrollContainer" type="ScrollContainer" parent="DiceGridContainer/Panel/AspectRatioContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_scroll_mode = 0

[node name="FaceGrid" type="GridContainer" parent="DiceGridContainer/Panel/AspectRatioContainer/HBoxContainer/FaceScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3

[node name="ScoreDiceScrollContainer" type="ScrollContainer" parent="DiceGridContainer/Panel/AspectRatioContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_scroll_mode = 0

[node name="ScoreDiceGrid" type="GridContainer" parent="DiceGridContainer/Panel/AspectRatioContainer/HBoxContainer/ScoreDiceScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 3
columns = 4

[node name="RewardDiceScrollContainer" type="ScrollContainer" parent="DiceGridContainer/Panel/AspectRatioContainer/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
horizontal_scroll_mode = 0

[node name="RewardDiceGrid" type="GridContainer" parent="DiceGridContainer/Panel/AspectRatioContainer/HBoxContainer/RewardDiceScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 3
columns = 4

[connection signal="pressed" from="DiceTabs/Score Dice" to="." method="_on_score_dice_pressed"]
[connection signal="toggled" from="DiceTabs/Score Dice" to="." method="_on_score_dice_toggled"]
[connection signal="toggled" from="DiceTabs/Reward Dice" to="." method="_on_reward_dice_toggled"]
